02-SG/main.tf
module "db" {
    source = "../../SG-MODULE-DEVELOPER"
    sg_name = "db"
    description_name = "sg for db"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    project_name = var.project_name
    environment = var.environment
    common_tags = var.common_tags
    
}

module "backend" {
    source = "../../SG-MODULE-DEVELOPER"
    sg_name = "backend"
    description_name = "sg for backend"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    project_name = var.project_name
    environment = var.environment
    common_tags = var.common_tags

}

module "frontend" {
    source = "../../SG-MODULE-DEVELOPER"
    sg_name = "frontend"
    description_name = "sg for fronend"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    project_name = var.project_name
    environment = var.environment
    common_tags = var.common_tags
  
}

## DB is accepting traffic from backend##
resource "aws_security_group_rule" "db_backend" {
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp"
  source_security_group_id = module.backend.sg_id
  security_group_id = module.db.sg_id
}

## backend is accepting traffic from frontend
resource "aws_security_group_rule" "backend_frontend" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  source_security_group_id = module.frontend.sg_id
  security_group_id = module.backend.sg_id
}

## frontend is accepting traffic from internet
resource "aws_security_group_rule" "frontend_public" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.frontend.sg_id
}
